--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
@@ -60,6 +61,15 @@
     transition: background-color 0.2s ease, border-color 0.2s ease;
   }
 
+  /* Animations */
+  @keyframes fadeInRight {
+    from { opacity: 0; transform: translateX(20px); }
+    to { opacity: 1; transform: translateX(0); }
+  }
+  .animate-fade-in-right {
+    animation: fadeInRight 0.3s ease-out forwards;
+  }
+
   /* Mobile App Feel */
   body {
     overscroll-behavior-y: contain;
@@ -71,7 +81,6 @@
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
     <script>
-      // Service Worker Kaydı
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js').then(reg => {
