--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
   
   /* --- FIGMA STYLE ROCKET ANIMATIONS --- */
   
+  @keyframes rocket-idle {
+    0%, 100% { transform: translateY(0) rotate(0deg); }
+    50% { transform: translateY(-2px) rotate(-2deg); }
+  }
+  .animate-rocket-idle {
+    animation: rocket-idle 1.6s ease-in-out infinite;
+  }
+
+  @keyframes rocket-flame {
+    0%, 100% { transform: scaleY(0.9); opacity: 0.6; filter: blur(1px); }
+    50% { transform: scaleY(1.15); opacity: 0.9; filter: blur(2px); }
+  }
+  .animate-rocket-flame {
+    animation: rocket-flame 0.6s ease-in-out infinite;
+  }
+
+  @keyframes rocket-core {
+    0%, 100% { transform: scale(0.8); opacity: 0.35; }
+    50% { transform: scale(1); opacity: 0.65; }
+  }
+  .animate-rocket-core {
+    animation: rocket-core 0.8s ease-in-out infinite;
+  }
+
   @keyframes figma-rumble {
     0%, 100% { transform: translate(0, 0) rotate(-45deg); }
     20% { transform: translate(-1.5px, 1.5px) rotate(-46deg); }
