--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
   
   /* --- FIGMA STYLE ROCKET ANIMATIONS --- */
   
+  @keyframes rocket-idle {
+    0%, 100% { transform: translateY(0) rotate(0deg); }
+    50% { transform: translateY(-2px) rotate(-2deg); }
+  }
+  .animate-rocket-idle {
+    animation: rocket-idle 1.6s ease-in-out infinite;
+  }
+
+  @keyframes rocket-flame {
+    0%, 100% { transform: scaleY(0.9); opacity: 0.6; filter: blur(1px); }
+    50% { transform: scaleY(1.15); opacity: 0.9; filter: blur(2px); }
+  }
+  .animate-rocket-flame {
+    animation: rocket-flame 0.6s ease-in-out infinite;
+  }
+
+  @keyframes rocket-core {
+    0%, 100% { transform: scale(0.8); opacity: 0.35; }
+    50% { transform: scale(1); opacity: 0.65; }
+  }
+  .animate-rocket-core {
+    animation: rocket-core 0.8s ease-in-out infinite;
+  }
+
   @keyframes figma-rumble {
     0%, 100% { transform: translate(0, 0) rotate(-45deg); }
     20% { transform: translate(-1.5px, 1.5px) rotate(-46deg); }
@@ -77,22 +101,25 @@
   }
 
   @keyframes figma-launch {
-    0% { transform: translate(0, 0) rotate(-45deg) scale(1); filter: brightness(1); }
-    15% { transform: translate(-30px, 30px) rotate(-45deg) scale(1.1); filter: brightness(1.2); } /* Anticipation */
-    100% { transform: translate(3000px, -3000px) rotate(-45deg) scale(0.1); filter: brightness(10) drop-shadow(0 0 100px #fff); opacity: 0; }
+    0% { transform: translate(0, 0) rotate(-45deg) scale(1); filter: brightness(1); opacity: 1; }
+    12% { transform: translate(-18px, 18px) rotate(-45deg) scale(1.08); filter: brightness(1.25); }
+    30% { transform: translate(40px, -60px) rotate(-45deg) scale(0.95); filter: brightness(1.6) drop-shadow(0 0 18px rgba(255,255,255,0.7)); }
+    60% { transform: translate(600px, -800px) rotate(-45deg) scale(0.55); filter: brightness(2.2) drop-shadow(0 0 40px rgba(255,255,255,0.8)); opacity: 0.9; }
+    100% { transform: translate(2400px, -2600px) rotate(-45deg) scale(0.1); filter: brightness(3.2) drop-shadow(0 0 120px rgba(255,255,255,0.9)); opacity: 0; }
   }
   .animate-figma-launch {
-    animation: figma-launch 0.9s cubic-bezier(0.85, 0, 0.15, 1) forwards;
+    animation: figma-launch 1.2s cubic-bezier(0.6, 0.02, 0.2, 1) forwards;
   }
 
   @keyframes figma-plasma-tail {
-    0% { height: 0; opacity: 0; transform: translateX(-50%) scaleX(1); }
-    20% { height: 200px; opacity: 1; transform: translateX(-50%) scaleX(2); }
-    60% { height: 800px; opacity: 0.8; transform: translateX(-50%) scaleX(1.5); }
-    100% { height: 2500px; opacity: 0; transform: translateX(-50%) scaleX(0.2); }
+    0% { height: 0; opacity: 0; transform: translateX(-50%) scaleX(0.8); filter: blur(0px); }
+    15% { height: 140px; opacity: 1; transform: translateX(-50%) scaleX(1.6); filter: blur(2px); }
+    45% { height: 520px; opacity: 0.9; transform: translateX(-50%) scaleX(1.4); filter: blur(3px); }
+    75% { height: 1200px; opacity: 0.6; transform: translateX(-50%) scaleX(0.9); filter: blur(5px); }
+    100% { height: 2200px; opacity: 0; transform: translateX(-50%) scaleX(0.2); filter: blur(8px); }
   }
   .animate-figma-tail {
-    animation: figma-plasma-tail 1s ease-out forwards;
+    animation: figma-plasma-tail 1.25s cubic-bezier(0.3, 0, 0, 1) forwards;
   }
 
   @keyframes figma-shockwave {
