--- a/index.html
+++ b/index.html
@@ -1,175 +1,33 @@
 
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/2098/2098402.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="theme-color" content="#2563eb" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>Proje Planlama Asistanı | Akıllı Web Aracı</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Notion Style Kanban</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@dnd-kit/core": "https://esm.sh/@dnd-kit/core@^6.3.1",
+    "@dnd-kit/utilities": "https://esm.sh/@dnd-kit/utilities@^3.2.2",
+    "tailwind-merge": "https://esm.sh/tailwind-merge@^3.4.0",
+    "@dnd-kit/sortable": "https://esm.sh/@dnd-kit/sortable@^10.0.0",
+    "clsx": "https://esm.sh/clsx@^2.1.1"
   }
 }
 </script>
-<style>
-  /* --- THEME SYSTEM --- */
-  :root {
-    --app-primary: #2563eb;
-    --app-primary-dark: #1d4ed8;
-    --app-accent: #3b82f6;
-    --app-accent-light: #eff6ff;
-    --app-ring: rgba(37, 99, 235, 0.2);
-  }
-
-  .theme-emerald {
-    --app-primary: #059669;
-    --app-primary-dark: #047857;
-    --app-accent: #10b981;
-    --app-accent-light: #ecfdf5;
-    --app-ring: rgba(5, 150, 105, 0.2);
-  }
-
-  .theme-purple {
-    --app-primary: #7c3aed;
-    --app-primary-dark: #6d28d9;
-    --app-accent: #8b5cf6;
-    --app-accent-light: #f5f3ff;
-    --app-ring: rgba(124, 58, 237, 0.2);
-  }
-
-  .theme-orange {
-    --app-primary: #ea580c;
-    --app-primary-dark: #c2410c;
-    --app-accent: #f59e0b;
-    --app-accent-light: #fff7ed;
-    --app-ring: rgba(234, 88, 12, 0.2);
-  }
-
-  .text-primary { color: var(--app-primary); }
-  .bg-primary { background-color: var(--app-primary); }
-  .bg-accent { background-color: var(--app-accent-light); }
-  .border-primary { border-color: var(--app-primary); }
-  
-  /* --- FIGMA STYLE ROCKET ANIMATIONS --- */
-  
-  @keyframes rocket-idle {
-    0%, 100% { transform: translateY(0) rotate(0deg); }
-    50% { transform: translateY(-2px) rotate(-2deg); }
-  }
-  .animate-rocket-idle {
-    animation: rocket-idle 1.6s ease-in-out infinite;
-  }
-
-  @keyframes rocket-flame {
-    0%, 100% { transform: scaleY(0.9); opacity: 0.6; filter: blur(1px); }
-    50% { transform: scaleY(1.15); opacity: 0.9; filter: blur(2px); }
-  }
-  .animate-rocket-flame {
-    animation: rocket-flame 0.6s ease-in-out infinite;
-  }
-
-  @keyframes rocket-core {
-    0%, 100% { transform: scale(0.8); opacity: 0.35; }
-    50% { transform: scale(1); opacity: 0.65; }
-  }
-  .animate-rocket-core {
-    animation: rocket-core 0.8s ease-in-out infinite;
-  }
-
-  @keyframes figma-rumble {
-    0%, 100% { transform: translate(0, 0) rotate(-45deg); }
-    20% { transform: translate(-1.5px, 1.5px) rotate(-46deg); }
-    40% { transform: translate(1.5px, -1.5px) rotate(-44deg); }
-    60% { transform: translate(-2px, -1px) rotate(-45.5deg); }
-    80% { transform: translate(2px, 1px) rotate(-44.5deg); }
-  }
-  .animate-figma-rumble {
-    animation: figma-rumble 0.1s infinite linear;
-  }
-
-  @keyframes figma-launch {
-    0% { transform: translate(0, 0) rotate(-45deg) scale(1); filter: brightness(1); opacity: 1; }
-    12% { transform: translate(-18px, 18px) rotate(-45deg) scale(1.08); filter: brightness(1.25); }
-    30% { transform: translate(40px, -60px) rotate(-45deg) scale(0.95); filter: brightness(1.6) drop-shadow(0 0 18px rgba(255,255,255,0.7)); }
-    60% { transform: translate(600px, -800px) rotate(-45deg) scale(0.55); filter: brightness(2.2) drop-shadow(0 0 40px rgba(255,255,255,0.8)); opacity: 0.9; }
-    100% { transform: translate(2400px, -2600px) rotate(-45deg) scale(0.1); filter: brightness(3.2) drop-shadow(0 0 120px rgba(255,255,255,0.9)); opacity: 0; }
-  }
-  .animate-figma-launch {
-    animation: figma-launch 1.2s cubic-bezier(0.6, 0.02, 0.2, 1) forwards;
-  }
-
-  @keyframes figma-plasma-tail {
-    0% { height: 0; opacity: 0; transform: translateX(-50%) scaleX(0.8); filter: blur(0px); }
-    15% { height: 140px; opacity: 1; transform: translateX(-50%) scaleX(1.6); filter: blur(2px); }
-    45% { height: 520px; opacity: 0.9; transform: translateX(-50%) scaleX(1.4); filter: blur(3px); }
-    75% { height: 1200px; opacity: 0.6; transform: translateX(-50%) scaleX(0.9); filter: blur(5px); }
-    100% { height: 2200px; opacity: 0; transform: translateX(-50%) scaleX(0.2); filter: blur(8px); }
-  }
-  .animate-figma-tail {
-    animation: figma-plasma-tail 1.25s cubic-bezier(0.3, 0, 0, 1) forwards;
-  }
-
-  @keyframes figma-shockwave {
-    0% { transform: scale(0.5); opacity: 1; border-width: 60px; filter: blur(0px); }
-    100% { transform: scale(40); opacity: 0; border-width: 0px; filter: blur(30px); }
-  }
-  .animate-figma-shockwave {
-    animation: figma-shockwave 1.4s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-  }
-
-  @keyframes star-fly {
-    0% { transform: translate(0, 0) scale(1.5); opacity: 0; }
-    10% { opacity: 1; }
-    100% { transform: translate(var(--tx), var(--ty)) scale(0); opacity: 0; }
-  }
-  .animate-star-fly {
-    animation: star-fly 0.8s cubic-bezier(0, 1, 0, 1) forwards;
-  }
-
-  @keyframes screen-shake-figma {
-    0%, 100% { transform: translate(0, 0); }
-    10%, 30%, 50%, 70%, 90% { transform: translate(-4px, -2px); }
-    20%, 40%, 60%, 80% { transform: translate(4px, 2px); }
-  }
-  .animate-shake-figma {
-    animation: screen-shake-figma 0.4s ease-in-out;
-  }
-
-  @keyframes hyper-flash {
-    0% { opacity: 0; }
-    10% { opacity: 0.8; }
-    100% { opacity: 0; }
-  }
-  .animate-hyper-flash {
-    animation: hyper-flash 0.6s ease-out forwards;
-  }
-
-  /* Smooth Transitions */
-  * {
-    transition: background-color 0.2s ease, border-color 0.2s ease, color 0.1s ease;
-  }
-
-  body {
-    overscroll-behavior-y: contain;
-    -webkit-tap-highlight-color: transparent;
-  }
-</style>
 </head>
-  <body class="bg-gray-50 dark:bg-gray-900 text-slate-800 dark:text-slate-100 antialiased selection:bg-blue-100 dark:selection:bg-blue-900">
+  <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
