--- a/index.html
+++ b/index.html
@@ -63,58 +63,50 @@
   .bg-accent { background-color: var(--app-accent-light); }
   .border-primary { border-color: var(--app-primary); }
   
-  /* --- PREMIUM ROCKET ANIMATIONS V2 --- */
-  @keyframes premium-idle-float {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-2px); }
+  /* --- HYPERDRIVE LAUNCH ANIMATIONS V4 --- */
+  @keyframes hyper-rumble {
+    0% { transform: translate(0, 0) rotate(0deg) scale(1.1); }
+    15% { transform: translate(-2px, 1px) rotate(-1.5deg) scale(1.12); }
+    30% { transform: translate(1px, -2px) rotate(1.5deg) scale(1.08); }
+    45% { transform: translate(-2px, -1px) rotate(0deg) scale(1.11); }
+    60% { transform: translate(2px, 2px) rotate(1deg) scale(1.1); }
+    75% { transform: translate(0, 2px) rotate(-1deg) scale(1.09); }
+    100% { transform: translate(0, 0) rotate(0deg) scale(1.1); }
   }
 
-  @keyframes premium-engine-glow {
-    0%, 100% { filter: brightness(1) saturate(1); }
-    50% { filter: brightness(1.5) saturate(1.5); }
-  }
-
-  @keyframes premium-rocket-rumble {
-    0% { transform: translate(0, 0); }
-    25% { transform: translate(1px, -1px); }
-    50% { transform: translate(-1px, 1px); }
-    75% { transform: translate(1px, 1px); }
-    100% { transform: translate(0, 0); }
+  @keyframes hyper-launch {
+    0% { transform: translateY(0) scale(1.1); opacity: 1; }
+    100% { transform: translateY(-800px) scale(0); opacity: 0; }
   }
   
-  @keyframes premium-spark-burst {
-    0% { transform: scale(0) translateY(0); opacity: 1; }
-    50% { opacity: 1; }
-    100% { transform: scale(1.5) translateY(var(--y-end)) translateX(var(--x-end)); opacity: 0; }
+  @keyframes hyper-exhaust {
+      0% { height: 8rem; opacity: 1; transform: scaleX(1); }
+      100% { height: 150vh; opacity: 0; transform: scaleX(20); }
   }
 
-  @keyframes premium-main-shake {
+  @keyframes hyper-screen-shake {
       0%, 100% { transform: translate(0, 0); }
-      20%, 60% { transform: translate(-2px, 1px); }
-      40%, 80% { transform: translate(2px, -1px); }
+      10%, 30%, 50%, 70%, 90% { transform: translate(-4px, -3px); }
+      20%, 40%, 60%, 80% { transform: translate(4px, 3px); }
   }
 
-  @keyframes premium-liftoff {
-    0% { transform: translateY(0) scale(1); opacity: 1; }
-    5% { transform: translateY(3px) scale(0.98); } /* Anticipation */
-    100% { transform: translateY(-8000px) scale(8) rotate(15deg); opacity: 0; }
+  @keyframes star-fly {
+    0% { transform: translate(0, 0) scale(1); opacity: 0; }
+    10% { opacity: 0.8; }
+    100% { transform: translate(var(--tx), var(--ty)) scale(0); opacity: 0; }
   }
-
-  @keyframes premium-exhaust-plume {
-    0% { transform: scaleY(0.5) scaleX(0.5); opacity: 0.8; }
-    100% { transform: scaleY(50) scaleX(10); opacity: 0; }
-  }
-
-  @keyframes premium-blast-flash {
+  
+  @keyframes hyper-flash {
       0% { opacity: 0; }
-      10% { opacity: 0.8; }
+      10% { opacity: 0.95; }
       100% { opacity: 0; }
   }
-  
-  @keyframes premium-shockwave {
-      0% { transform: scale(0.1); opacity: 1; border-width: 50px; }
-      100% { transform: scale(30); opacity: 0; border-width: 0; }
+
+  @keyframes hyper-shockwave {
+      0% { transform: scale(0.2); opacity: 1; border-width: 80px; }
+      100% { transform: scale(50); opacity: 0; border-width: 0; }
   }
+
 
   /* Smooth Transitions */
   * {
